--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "main": "src/worker/index.js",
   "scripts": {
     "dev": "wrangler dev src/worker/index.js",
+    "dev:worker": "wrangler dev src/worker/index.js",
+    "dev:pages": "wrangler pages dev pages",
+    "dev:both": "concurrently \"npm run dev:worker\" \"npm run dev:pages\"",
     "deploy:worker": "wrangler deploy src/worker/index.js",
     "pages:dev": "wrangler pages dev pages",
-    "pages:deploy": "wrangler pages deploy pages"
+    "pages:deploy": "wrangler pages deploy pages",
+    "start": "./dev-start.sh"
   },
   "author": "",
   "license": "MIT",
