fix: 修复端口冲突问题和启动脚本
- 修复Pages服务端口冲突，明确指定8788端口
- 更新dev-start.sh脚本同时启动Worker和Pages服务
- 简化package.json脚本配置，移除重复和无效脚本
- 更新DEV_GUIDE.md反映正确的启动方式
- 现在两个服务可以正常并行运行：
  * Worker API: http://localhost:8787
  * Pages 前端: http://localhost:8788

--- a/package.json
+++ b/package.json
@@ -6,10 +6,8 @@
   "scripts": {
     "dev": "wrangler dev src/worker/index.js",
     "dev:worker": "wrangler dev src/worker/index.js",
-    "dev:pages": "wrangler pages dev pages",
-    "dev:both": "concurrently \"npm run dev:worker\" \"npm run dev:pages\"",
+    "dev:pages": "wrangler pages dev pages --port 8788",
     "deploy:worker": "wrangler deploy src/worker/index.js",
-    "pages:dev": "wrangler pages dev pages",
     "pages:deploy": "wrangler pages deploy pages",
     "start": "./dev-start.sh"
   },
