feat: 添加完整的Cloudflare部署配置
- 添加DEPLOY.md详细部署指南
- 创建pages/_redirects配置SPA路由
- 创建pages/_headers配置安全头
- 更新README.md添加Git仓库部署说明
- 添加deploy脚本一键部署Worker和Pages

现在支持：
✅ Git仓库直接部署到Cloudflare Pages
✅ Wrangler CLI部署
✅ 完整的配置文档和故障排除指南
✅ 安全头和路由配置

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev:worker": "wrangler dev src/worker/index.js",
     "dev:pages": "wrangler pages dev pages --port 8788",
     "deploy:worker": "wrangler deploy src/worker/index.js",
-    "pages:deploy": "wrangler pages deploy pages",
+    "deploy:pages": "wrangler pages deploy pages",
+    "deploy": "npm run deploy:worker && npm run deploy:pages",
     "start": "./dev-start.sh"
   },
   "author": "",
