refactor: 重命名项目为AI Search
- 将项目名从 cloudflare-autorag 改为 aisearch
- 将Worker名从 autorag-worker 改为 aisearch
- 更新所有文档和代码中的相关引用：
  * AutoRAG → AI Search
  * AUTO_RAG_API_URL → AI_SEARCH_API_URL
  * autoRagRequest → aiSearchRequest
- 更新前端标题为 'AI Search 智能搜索'
- 保持所有功能和配置不变，仅更新命名

部署后的Worker URL将是：
https://aisearch.your-subdomain.workers.dev

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "cloudflare-autorag",
+  "name": "aisearch",
   "version": "1.0.0",
-  "description": "Cloudflare Worker and Pages application for AutoRAG integration",
+  "description": "Cloudflare Worker and Pages application for AI Search integration",
   "main": "src/worker/index.js",
   "scripts": {
     "dev": "wrangler dev src/worker/index.js",
