--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy:worker": "wrangler deploy src/worker/index.js",
     "deploy:pages": "wrangler pages deploy pages",
     "deploy": "npm run deploy:worker && npm run deploy:pages",
+    "get-worker-url": "./scripts/get-worker-url.sh",
     "start": "./dev-start.sh"
   },
   "author": "",
