--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,6 +2,9 @@ name = "aisearch"
 main = "src/worker/index.js"
 compatibility_date = "2024-01-01"
 
+# 自定义子域名配置
+# 部署后将使用: https://aisearch.tsaitang404.workers.dev
+
 # 您可以在这里添加自定义域名
 # routes = [
 #   { pattern = "api.yourdomain.com/*", zone_name = "yourdomain.com" }
