--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,8 +2,8 @@ name = "ai-search"
 main = "src/worker/index.js"
 compatibility_date = "2024-01-01"
 
-# Pages 配置
-pages_build_output_dir = "pages"
+# Pages 配置 (仅用于文档说明，实际Worker部署不使用此配置)
+# pages_build_output_dir = "pages"
 
 # 自定义子域名配置
 # 部署后将使用: https://aisearch.tsaitang404.workers.dev
