重构：将双Worker架构改为单Worker架构
- 合并前端和API到单个Worker (src/worker/index.js)
- 移除独立的前端Worker和相关配置
- 简化部署流程，统一为单一入口点
- 更新开发脚本和文档以反映新架构
- 前端页面: http://localhost:8787/
- API接口: http://localhost:8787/api

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,22 +15,9 @@
       "isBackground": true
     },
     {
-      "label": "启动Pages开发服务器",
-      "type": "shell",
-      "command": "npm run pages:dev",
-      "problemMatcher": [],
-      "isBackground": true
-    },
-    {
       "label": "部署Worker",
       "type": "shell",
-      "command": "npm run deploy:worker",
-      "problemMatcher": []
-    },
-    {
-      "label": "部署Pages",
-      "type": "shell",
-      "command": "npm run deploy:pages",
+      "command": "npm run deploy",
       "problemMatcher": []
     }
   ]
