--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
-name = "api-backend"
+name = "aisearch"
 main = "src/worker/index.js"
 compatibility_date = "2024-01-01"
 
@@ -6,26 +6,13 @@ compatibility_date = "2024-01-01"
 [ai]
 binding = "AI"
 
-# Pages 配置
-pages_build_output_dir = "pages"
-
-# 自定义子域名配置
-# API后端: https://api-backend.tsaitang.workers.dev (默认)
-#          https://api.search.tsaitang.workers.dev (自定义域名)
-# 前端页面: https://search.tsaitang.workers.dev
-
-# 您可以在这里添加自定义域名
-# routes = [
-#   { pattern = "search.tsaitang.workers.dev/*", zone_name = "tsaitang.workers.dev" }
-# ]
-
-# 环境变量配置
-# [vars]
-# 使用AI绑定，不需要额外的环境变量
-
 # 开发环境配置
 [dev]
 port = 8787
+
+# 自定义域名配置 (可选)
+# 您可以通过Cloudflare Dashboard配置自定义域名
+# 例如: search.yourdomain.com → aisearch
 
 # 您可以在这里配置KV、D1数据库或其他Cloudflare资源
 # [[kv_namespaces]]
