重构：完整重新组织项目结构
✨ 主要改进:
- 重新组织目录结构为更专业的布局
- 将文档移动到 docs/ 目录
- 将开发工具移动到 tools/scripts/ 目录
- 将配置文件移动到 config/ 目录
- 清理了冗余的 frontend-reference 目录
- 优化了 VS Code 任务配置

📁 新项目结构:
- src/worker/index.js (唯一的核心代码文件)
- config/wrangler.toml (Cloudflare Worker配置)
- tools/scripts/ (开发脚本)
- docs/ (项目文档)
- .vscode/ (开发环境配置)

🚀 部署状态:
- 已成功部署到 https://aisearch.tsaitang.workers.dev
- 单Worker架构运行正常
- 前端页面和API服务都正常工作

🎯 项目现在更加专业、清晰和易于维护

--- a/.gitignore
+++ b/.gitignore
@@ -37,5 +37,10 @@ pnpm-debug.log*
 .DS_Store
 Thumbs.db
 
-# copilot 文件
-.github/copilot-instructions.md
+# 临时文件
+*.tmp
+*.temp
+.cache/
+
+# Cloudflare 相关
+wrangler.toml.bak
