feat: 添加GitHub Actions自动部署配置
- 新增GitHub Actions工作流，支持v*标签自动部署到Cloudflare Worker
- 添加CI专用脚本用于部署后状态检查和URL获取
- 创建交互式发布脚本，自动创建版本标签并触发部署
- 更新package.json添加发布相关的npm scripts
- 添加详细的部署配置文档和安全说明
- 包含完整的GitHub Secrets配置指南和故障排除

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "lint": "echo 'Running basic validation...' && node -c src/worker/index.js",
     "test": "echo 'Running tests would go here'",
     "build": "echo 'Build step (if needed) would go here'",
-    "status": "wrangler whoami && wrangler d1 info"
+    "status": "wrangler whoami && wrangler d1 info",
+    "release": "./scripts/release.sh",
+    "release:patch": "npm run release"
   },
   "keywords": [
     "cloudflare",
