docs: 添加Cloudflare API权限配置详细指南
- 新增完整的CF API权限配置文档，包含详细权限说明
- 添加API Token权限检查脚本，可验证Token有效性和权限
- 更新部署文档，引用详细的权限配置指南
- 简化GitHub README中的权限配置部分
- 添加npm脚本用于权限检查和配置验证
- 提供最小权限配置和完整权限配置示例

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "build": "echo 'Build step (if needed) would go here'",
     "status": "wrangler whoami && wrangler d1 info",
     "release": "./scripts/release.sh",
-    "release:patch": "npm run release"
+    "release:patch": "npm run release",
+    "check-secrets": "./scripts/check-secrets.sh",
+    "check-cf-permissions": "./scripts/check-cf-permissions.sh"
   },
   "keywords": [
     "cloudflare",
