--- a/config/wrangler.toml
+++ b/config/wrangler.toml
@@ -6,6 +6,12 @@ compatibility_date = "2024-01-01"
 [ai]
 binding = "AI"
 
+# D1 数据库绑定配置
+[[d1_databases]]
+binding = "DB"
+database_name = "neoai"
+database_id = "neoai"
+
 # 开发环境配置
 [dev]
 port = 8787
