🐛 修复认证系统并成功部署
✅ 解决问题:
- 修复开发环境 D1 数据库绑定问题
- 适配现有数据库表结构 (users, user_sessions, chat_history)
- 解决 POST /api/auth/register 500 错误

🔧 技术改进:
- 更新 wrangler.toml 添加 preview_database_id 配置
- 修改 initializeDatabase 函数，适配现有表结构
- 更新数据库操作函数匹配实际表字段
- 完善 API 路由方法验证

✅ 功能验证:
- 用户注册: ✅ 正常工作
- 用户登录: ✅ 正常工作
- 会话管理: ✅ 正常工作
- 用户信息: ✅ 正常工作

🌐 部署状态:
- 生产环境: https://neoai.tsaitang.workers.dev
- D1 数据库: 正常连接 (11a6a452-a8b6-4d10-9963-f5a204bd02d0)
- 所有认证功能在生产环境下完全可用

📝 注意事项:
- 开发环境下 D1 绑定可能不稳定，推荐生产环境测试
- 已适配现有数据库结构，向后兼容
- 认证功能现已完整可用，支持注册/登录/会话管理

--- a/config/wrangler.toml
+++ b/config/wrangler.toml
@@ -11,6 +11,7 @@ binding = "AI"
 binding = "DB"
 database_name = "neoai"
 database_id = "11a6a452-a8b6-4d10-9963-f5a204bd02d0"
+preview_database_id = "11a6a452-a8b6-4d10-9963-f5a204bd02d0"
 
 # 开发环境配置
 [dev]
